# rest_classroom

./: db.sqlite3  pyproject.toml
classroom_app/: admin.py  models.py  serializers.py  urls.py  views.py
classroom_app/migrations/: 0001_initial.py  0002_auto_20210507_1908.py  0003_auto_20210508_0623.py  0004_alter_calenderevents_time.py  0005_auto_20210508_0906.py  0006_calenderevents_color.py  0007_auto_20210509_0635.py
core/: settings.py  urls.py
